Added more options to blockly elements Added preconfigured demo chart

--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,17 @@
     <div id="root"></div>
 
     <xml id="toolbox" style="display: none">
+      <category name="Charts" colour="160">
       <block type="combination_chart"></block>
-      <block type="value_axis"></block>
-      <block type="band_axis"></block>
       <block type="bar_chart"></block>
       <block type="area_chart"></block>
       <block type="stacked_bar_chart"></block>
       <block type="measure_settings"></block>
+    </category>
+    <category name="Axis" colour="230">
+      <block type="value_axis"></block>
+      <block type="band_axis"></block>
+    </category>
     </xml>
   </body>
 </html>
