Attempt to make state machine axis + some refactoring

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,8 @@
       <block type="value_axis"></block>
       <block type="band_axis"></block>
     </category>
+    <category name="Custom" custom="CUSTOM_COMPONENTS" colour="50">
+    </category>
     </xml>
   </body>
 </html>
