State Summary Chart Widget v 0.1

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script src="%PUBLIC_URL%/libs/blockly/javascript_compressed.js"></script>
     <script src="%PUBLIC_URL%/libs/blockly/languages/en.js"></script>
 
-    <title>React Charts</title>
+    <title>React State Summary Example</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
